# PythonFun_SWEngineer

./: .gitignore  Magna_CPU_Load_withGraphParser.py
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/: CMakeLists.txt  ReadMe.txt  WdgFwConfig.cmake  WdgMConfigGen.py
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/Common/: WdgFw_Std_Types.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/Wdg/: concerto.mak  makefile
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/Wdg/cfg/: Wdg_Cfg.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/Wdg/inc/: Wdg.h  WdgGlobal.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/Wdg/src/: Wdg.c
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgIf/: makefile
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgIf/cfg/: WdgIf_Cfg_Features.h  WdgIf_Lcfg.c  WdgIf_Lcfg.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgIf/inc/: WdgIf.h  WdgIf_Cfg.h  WdgIf_Types.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgIf/src/: WdgIf.c
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgIf_Magna/: concerto.mak  makefile
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgIf_Magna/inc/: WdgIf.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgIf_Magna/src/: WdgIf.c
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM/: makefile
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM/cfg/: WdgM_Cfg_Features.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM/cfg/mcu2_1/: WdgM_Cfg.c  WdgM_Cfg.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM/inc/: WdgM.h  WdgM_Types.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM/src/: WdgM.c  WdgM_Checkpoint.c  WdgM_Intr.c
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM_Magna/: concerto.mak  makefile
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM_Magna/cfg/: WdgM_Cfg_Private.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM_Magna/cfg/MCU2_0/: WdgM_Cfg.c  WdgM_Cfg.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM_Magna/cfg/MCU2_1/: WdgM_Cfg.c  WdgM_Cfg.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM_Magna/inc/: WdgM.h  WdgM_Private.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgM_Magna/src/: WdgM.c
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgSlave/: makefile
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgSlave/inc/: WdgSlave.h
ADAS_Virtual_ECU/sw_app/bookshelf/WdgFw/WdgSlave/src/: WdgSlave.c
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/: .cproject  CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/: CMakeLists.txt  aPuC_ver.h
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/CALSMIntgr/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/DLDIntgr/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/EOLIntgr/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/OCIntgr/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/OVL3DIntgr/: CMakeLists.txt  IDataProviderOvl3D.h  JobOvl3D.cpp  JobOvl3D.h  RenderThreadRunnable.cpp  RenderThreadRunnable.h  sv.cpp  sv.h
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/TAD2Intgr/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/THAIntgr/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Apps/TIOVXIntgr/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Framework/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Framework/CoreLibs/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/Framework/CoreServices/: CMakeLists.txt
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/OS/: manifest.yml
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/App/code/OS/prebuilt/: .gitignore
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/Tools/MessageGenerator/MessageTester/: CMakeLists.txt  Main.cpp  Messenger.cpp  Messenger.h
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/Tools/MessageGenerator/MessageTester/UI/: MessengerUi.ui
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/Tools/MessageGenerator/ToolSDK/: CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  FontLoader.cpp  FontLoader.h  ImageLoader.cpp  ImageLoader.h  StringUtils.cpp  StringUtils.h
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/Tools/MessageGenerator/ToolSDK/Network/: ThreadedClient.cpp  ThreadedClient.h
ADAS_Virtual_ECU/sw_app/mpu1_0/linux/puc/Tools/MessageGenerator/src/: CMakeLists.txt  CodeFile.cpp  CodeFile.h  DataType.cpp  DataType.h  Main.cpp  Message.cpp  Message.h  MessageGenerator.cpp  MessageGenerator.h
ADAS_Virtual_ECU/sw_app/platform/sdk/rtos/tiovx/source/isp_qnx_magna/: 147banding.py  CMakeLists.txt  ReleaseNote.txt  build.bat  build.sh  isp_143.cfg  isp_147.cfg  isp_old_sharpness.cfg  reg147.py
ADAS_Virtual_ECU/sw_app/platform/sdk/rtos/tiovx/source/isp_qnx_magna/cmake/: generate_version.cmake  qnx.toolchain.cmake  version_gen.sh
ADAS_Virtual_ECU/sw_app/platform/sdk/rtos/tiovx/source/isp_qnx_magna/j7/: concerto.mak
ADAS_Virtual_ECU/sw_app/platform/sdk/rtos/tiovx/source/isp_qnx_magna/src/: algo_defaults.h  items.h  (+35 more)
Automotive_Tester/: README.md  automotive_tester.spec  build.bat  build.py  config.json  example_boot_voltage_check.py  example_ecu_flash_verify.cmm  main.py  pyproject.toml  pytest.ini  requirements.txt
Automotive_Tester/core/: __init__.py  can_diag.py  debug_console.py  debugger.py  logger.py  queue_manager.py  test_runner.py
Automotive_Tester/interfaces/: __init__.py  camera_interface.py  canoe_interface.py  power_supply.py  power_supply_interface.py  serial_interface.py  serial_manager.py  trace32_interface.py
Automotive_Tester/scripts/: example_test.cmm  example_test.py  hello_world.cmm
Automotive_Tester/tests/: __init__.py  test_can_diag.py  test_interfaces.py  test_runner_tests.py
Automotive_Tester/ui/: app.py
CAN_Logger/: README.md  pyproject.toml
CAN_Logger/CAN_Log_Parser/: CAN_log_parser.py  readme.txt
CAN_Logger/CAN_Replay_Debugger/: LAUNCH_APP.py  RUN_APP.bat  ReadMe.txt  can_diag_replay_monitor.py  install_dependencies.bat
CAN_Logger/DataLogger/: MagnaDataLogger.py  advanced_analytics.py
CAN_Logger/can_logger_gui/: __init__.py  __main__.py  analytics.py  cli.py  gui.py  parser.py
CAN_Logger/tests/: test_analytics.py  test_dbc_decoding.py  test_parser.py
CAN_Logger/tests/fixtures/: sample.asc
(+7436 files in other folders)
