[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automotive-tester"
version = "0.1.0"
description = "Automotive ECU Tester - Trace32 / Power Supply / Camera / Serial"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
  "Pillow>=9.0",
]

[tool.setuptools.packages.find]
include = ["core*", "interfaces*"]
