[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can-logger-gui"
version = "0.1.0"
description = "Professional GUI for CAN log visualization"
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "matplotlib>=3.6",
]

[project.scripts]
can-logger-gui = "can_logger_gui.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["can_logger_gui*"]
